# weather-forecast-chatbot

./: .gitignore  README.md  ai-manifest.json  config.yml  domain.yml  pyproject.toml  test_owm.py
.github/: copilot-instructions.md
.github/prompts/: commit.prompt.md  publish-to-pipy.prompt.md  release-new-version.prompt.md  summarize-changes.prompt.md  tag-new-version.prompt.md  update-documentation.prompt.md
actions/: actions.py
data/: nlu.yml  rules.yml  stories.yml
service/: normalization.py  test_normalization.py  test_weather.py  weather.py
